# animaworks

./: .cursorrules  .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ja.md  README_ko.md  README_zh.md  _git_ops.py  _git_ops_output_mirror.txt  docker-compose.neo4j.yml  docker-compose.yml  main.py  plan.md  pyproject.toml  pytest.ini
.claude/: launch.json  settings.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py
benchmarks/locomo/: README.md  __init__.py  __main__.py  adapter.py  answer_prompt.py  compare_modes.py  compare_results.py  llm_config.py  metrics.py  multihop.py  neo4j_adapter.py  protocol.py  retrieval_diagnostics.py  run_neo4j.py  runner.py
benchmarks/results/: locomo_standard_protocol_baseline_20260611.json
cli/: __init__.py  _gateway.py  parser.py
cli/commands/: __init__.py  anima.py  anima_merge.py  anima_mgmt.py  board.py  company_cmd.py  cost_cmd.py  cron_guard.py  import_cmd.py  index_cmd.py  init_cmd.py  logs.py  messaging.py  models_cmd.py  optimize_assets.py  profile.py  remake_cmd.py  repair_rag_cmd.py  server.py  task_cmd.py  vault_cmd.py
core/: __init__.py  _agent_cycle.py  _agent_executor.py  _agent_priming.py  _agent_prompt_log.py  _anima_heartbeat.py  _anima_inbox.py  _anima_lifecycle.py  _anima_messaging.py  agent.py  anima.py  anima_factory.py  anima_roster.py  asset_reconciler.py  audit.py  auto_updater.py  background.py  bootstrap_state.py  cascade_limiter.py  company.py  company_resources.py  delegation_recovery.py  discord_webhooks.py  exceptions.py  external_tools.py  file_access_policy.py  gpu.py  i18n.py  image_artifacts.py  infra.py  init.py  lifecycle.py  logging_config.py  meeting_room_store.py  memory.py  messenger.py  org_sync.py  outbound.py  outbound_auto.py  paths.py  (+10 more)
core/auth/: __init__.py  manager.py  models.py
core/config/: __init__.py  anima_registry.py  cli.py  env_slots.py  global_permissions.py  io.py  local_llm.py  migrate.py  model_config.py  model_mode.py  models.py  resolver.py  schemas.py  vault.py
core/execution/: __init__.py  _completion_gate.py  _litellm_context.py  _litellm_streaming.py  _litellm_tools.py  _sanitize.py  _sdk_hooks.py  _sdk_options.py  _sdk_security.py  _sdk_session.py  _sdk_stream.py  _session.py  _streaming.py  _tool_summary.py  agent_sdk.py  anthropic_fallback.py  assisted.py  base.py  codex_sdk.py  gemini_cli.py  grok_cli.py  litellm_loop.py  rate_guard.py  reminder.py
core/external_tasks/: __init__.py  collector.py  models.py  store.py
core/goals/: __init__.py  judge.py  manager.py  models.py
core/i18n/: __init__.py
core/lifecycle/: __init__.py  inbox_watcher.py  knowledge_correction.py  scheduler.py  system_consolidation.py  system_crons.py
core/mcp/: server.py
core/memory/: __init__.py  _activity_conversation.py  _activity_models.py  _activity_priming.py  _activity_replay.py  _activity_rotation.py  _activity_timeline.py  _io.py  _llm_utils.py  action_gate.py  activity.py  audit.py  bm25.py  config_reader.py  consolidation.py  contradiction.py  conversation.py  conversation_compression.py  conversation_finalize.py  conversation_models.py  (+33 more)
demo/: .env.example  Dockerfile  README.ja.md  README.md  adjust_dates.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
deploy/: animaworks.service
docs/: api-reference.ja.md  api-reference.md  brain-mapping.ja.md  brain-mapping.md  cli-reference.ja.md  cli-reference.md  company-management.md  features.ja.md  features.md  gpu-operations.md  memory.ja.md  memory.md  og-image.html  rag-implementation.md  security.ja.md  security.md  slack-socket-mode-setup.ja.md  slack-socket-mode-setup.md  spec.ja.md  spec.md  vision.ja.md  vision.md  zoom-rtms-setup.ja.md
scripts/: analyze_heartbeat_times.py  analyze_heartbeat_tools.py  auto_update_claude.sh  browser_console_test.py  build_docs.py  check_facts_health.py  check_sidebar_screenshot.py  cleanup_runtime.py  crop_face_center.py  debug_important_tag_e2e.py  debug_ipc_direct.py  debug_priming.py  debug_system_prompt.py  demo_consolidation.py  demo_priming.py  demo_rag.py  demo_spreading_activation.py  demo_weekly_integration.py  doc_freshness.md  doc_freshness.py  generate_changelog.py  generate_reference.py  generate_small_dataset.py  gpu-power-guard.sh  index_peranima.py  investigate_anima_data_growth.md  investigate_heartbeat_13jst.py  investigate_heartbeat_times.py  investigate_task_data.py  investigate_task_resurrection.md  lint_skill.py  locomo_legacy_smoke.sh  migrate_chatwork_identity.py  migrate_credentials_to_vault.py  migrate_shared_users_cleanup.py  migrate_tool_prompts_db.py  pr-review-dispatch.py  quality_gate.py  run_locomo_bench.sh  setup.sh  (+4 more)
server/: app.py  dependencies.py  discord_channel_sync.py  discord_gateway.py  events.py  github_gateway.py  localhost.py  reload_manager.py  room_manager.py  routes.py  slack_channel_sync.py  slack_interactive.py  slack_socket.py  stream_registry.py  usage_governor.py  websocket.py  zoom_gateway.py
swe/: README.md  ci_autofix.py  ci_autofix_loop.py  ci_autofix_types.py  runner.py
templates/: __init__.py  bootstrap.md
tests/: conftest.py  test_access_frequency.py  test_activity_log_degradation.py  test_anima_merge.py  test_board_cli.py  test_cascade_limiter.py  test_cli_send_human_sender.py  test_consolidation.py  test_contradiction.py  test_data_durability.py  test_distillation.py  test_episode_dedup.py  test_expression_generation.py  test_forgetting.py  test_forgetting_procedures.py  test_graph.py  test_housekeeping.py  test_inbox_read_counter.py  test_knowledge_validation.py  test_lifecycle_consolidation.py  test_memory_io.py  test_messenger_depth_limit.py  test_outbound_rate_limiting.py  test_priming.py  test_priming_budget.py  test_procedure_frontmatter.py  test_procedure_matching.py  test_rag.py  test_rag_e2e.py  test_reconsolidation.py  test_scheduled_hb_cascade.py  test_skill_creator_spec_fixes.py  test_streaming_journal.py  test_watcher.py
tools/: dump_prompt.py  format_prompt_log.py
(+2190 files in other folders)
