[project]
name = "animaworks"
version = "0.2.0"
description = "AnimaWorks - Digital Person Framework with library-type memory"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "LICENSES/*.txt"]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.35",
    "anthropic>=0.42.0",
    "litellm>=1.55.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
communication = ["requests>=2.31", "slack-sdk>=3.27"]
gmail = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0", "google-auth-httplib2>=0.2"]
transcribe = ["faster-whisper>=1.0"]
aws = ["boto3>=1.34"]
rag = ["chromadb>=0.4.0", "sentence-transformers>=2.2.0", "rank-bm25>=0.2.2", "networkx>=3.0"]
all-tools = ["animaworks[communication,gmail,transcribe,aws,rag]"]
redis = ["redis>=5.0.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-timeout>=2.2"]

[tool.setuptools]
py-modules = ["main"]
packages = ["cli", "cli.commands", "core", "core.tools", "server"]

[project.scripts]
animaworks = "cli:cli_main"
animaworks-tool = "core.tools:cli_dispatch"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests making real API calls (skip with --mock or no API key)",
    "azure: tests requiring Azure OpenAI API key",
    "ollama: tests requiring Ollama server access",
]
timeout = 120
