[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "animaworks"
version = "0.5.1"
description = "AnimaWorks - Digital Anima Framework with library-type memory"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.40",
    "anthropic>=0.42.0",
    "openai-codex-sdk>=0.1.11,<0.2",
    "litellm>=1.55.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "structlog>=24.1.0",
    "orjson>=3.9.0",
    "json-repair>=0.30.0",
    "pwdlib[argon2]>=0.3.0",
    "markdownify>=0.14.1",
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
communication = ["requests>=2.31", "slack-sdk>=3.27", "slack-bolt>=1.21", "aiohttp>=3.9"]
notification = ["line-bot-sdk>=3.0"]
gmail = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0", "google-auth-httplib2>=0.2"]
transcribe = ["faster-whisper>=1.0"]
aws = ["boto3>=1.34"]
rag = ["networkx>=3.0", "watchdog>=3.0.0"]
codex = ["openai-codex-sdk>=0.1.11,<0.2"]
all-tools = ["animaworks[communication,gmail,transcribe,aws,rag,notification,codex]"]
redis = ["redis>=5.0.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-timeout>=2.2", "psutil>=5.9.0", "pytest-cov>=5.0", "ruff>=0.9"]
evaluation = [
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "cli*", "server*"]
exclude = ["tests*", "archive*", "demo*", "site-docs*"]

[tool.setuptools.package-data]
server = ["static/**/*"]

[project.scripts]
animaworks = "cli:cli_main"
animaworks-tool = "core.tools:cli_dispatch"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "performance: marks tests as performance tests",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "live: tests making real API calls (skip with --mock or no API key)",
    "azure: tests requiring Azure OpenAI API key",
    "ollama: tests requiring Ollama server access",
    "timeout: set per-test timeout in seconds (requires pytest-timeout)",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["archive/", ".venv/", "site-docs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "E402",
    "UP047",
    "SIM105",
    "SIM108",
    "SIM102",
]

[tool.ruff.lint.per-file-ignores]
"core/tools/image_gen.py" = ["F401"]
"core/config/__init__.py" = ["F401"]
"core/prompt/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "boto3>=1.42.54",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "watchdog>=6.0.0",
]
